# health-assistant

./: .env_template  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
data/: ground_truth_retrieval.parquet  medquad-embeddings.parquet  medquad_clean.parquet  rag-eval-gpt-4o-mini-prompt1-a-q-a.parquet  rag-eval-gpt-4o-mini-prompt2-a-q-a.parquet  rag_eval_gpt_4o_mini_prompt1_a_q.parquet  rag_eval_gpt_4o_mini_prompt2_a_q.parquet
grafana/: health_assistant_dashboard.json
health-assistant/: postgres-oop.py  postgres.py
health_assistant/: LEGACY_rag.py  app.py  app_tests.py  cost_calculator.py  database_manager.py  elasticsearch_indexer.py  embedding_service.py  llm_service.py  logging_setup.py  orchestrator copy.py  orchestrator.py  prompt_builder.py  prompt_templates.py  rag.py  response_evaluator.py  search_service.py
scripts/: clean-data.py  clean_data.py  docker-compose.yaml  evaluation-data-generation.py  generate_embeddings.py  generate_evaluation_data.py  get-embeddings.py  rag-flow-tests.py  rag-flow.py  rag_flow_tests.py  retrieval-evaluation.py  retrieval_evaluation.py
