[tool.poetry]
name = "health-assistant"
version = "0.1.0"
description = "Contains necessary depedencies to run the Health Assistant Retrieval Augmented Generation project."
authors = ["Marc Soler <msolerjosa@gmail.com>"]
license = "Apache License (Version 2.0, January 2004)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.43.0"
pandas = "^2.2.2"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
streamlit = "^1.38.0"
sentence-transformers = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
